--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <div class="panel-body">
                             <div>
                                 <label>模板</label>
-                                <input class="form-control" ng-model="template" type="text" placeholder="输入模板值…" style="width:100%;"/>
+                                <input class="form-control" ng-model="template" type="text" placeholder="输入模板值,#为通配符…" style="width:100%;"/>
                             </div>
                             <div>
                                 <label>模板值</label>
